[package]
name = "dungeon_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = "0.2.3"
sdl2 = {version = "0.36.0", features = ["raw-window-handle"]}
stb_image = "0.3.0"
ash-bootstrap = {path = "D:\\vk-firewood-rs"}
vk-mem = "0.3.0"
ash = {version = "0.37.3+1.3.251", features = ["libloading", "loaded", "linked"]}
